--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -78,8 +78,8 @@
       <p>コメント件数:<%= @event.comments.count %></p>
       <% @event.comments.each do |comment| %>
         <div class="media mb-3">
-          <img src="<%= comment.user.get_image(100,100) %>" class="mr-3" alt="<%= comment.user.full_name %>" width="100">
-          <div class="media-body">
+          <%= image_tag comment.user.image, size: "100x100", class: "rounded-circle"%>
+          <div class="media-body ml-2">
             <h6 class="mt-0"><%= comment.user.full_name %></h6>
             <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
             <p><%= comment.comment %></p>
