--- a/app/views/public/users/favorite.html.erb
+++ b/app/views/public/users/favorite.html.erb
@@ -1,42 +1,48 @@
 <div class="container">
   <div class="mt-5 ml-3 text-center"><h4>お気に入りイベント一覧</h4></div>
-    <div class="container mt-4">
-      <div class="row justify-content-center">
-         <% if @user_favorites.any? %>
-           <% @user_favorites.each do |uf| %>
-            <div class="col-md-8 mt-4">
-             <div class="row">
-               <div class="col-md-4">
-                 <%= link_to event_path(uf.event.id) do %>
-                   <% if uf.event.image.attached? %>
-                     <%= image_tag uf.event.image, size: "250x250" %>
-                   <% else %>
-                     <%= image_tag 'no_image', size: "250x250" %>
-                   <% end %>
-                 <% end %>
-               </div>
-               <div class="col-md-8">
-                 <div class="ml-1 mt-1"><%= link_to uf.event.name, event_path(uf.event.id) %></div>
-                 <% uf.event.categories.each do |category| %>
-                  <div class="ml-1 mt-1"><%= category.name %></div>
-                 <% end %>
-                 <div class="ml-1 mt-1">開催日時：<%= uf.event.date %></div>
-                 <div class="ml-1 mt-1">募集人数：<%= uf.event.number %>人</div>
-                 <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[uf.event.prefecture_id] %></div>
-                 <div class="ml-1 mt-1"><イベント概要><br>
-                   <% if uf.event.outline.length > 40 %>
-                     <%= uf.event.outline[0, 40] + "..." %>
-                   <% else %>
-                     <%= uf.event.outline %>
-                   <% end %>
-                 </div>
-               </div>
-             </div>
+
+    <div class="mt-4">
+      <% if @user_favorites.any? %>
+        <% @user_favorites.each do |uf| %>
+          <div class="col-md-8 mx-auto">
+            <div class="container mt-4">
+              <div class="row">
+                <div class="col-md-12 mt-2 border">
+                  <div class="row">
+                    <div class="col">
+                      <%= link_to event_path(uf.event.id) do %>
+                        <% if uf.event.image.attached? %>
+                          <%= image_tag uf.event.image, size: "250x250" %>
+                        <% else %>
+                          <%= image_tag 'no_image', size: "250x250" %>
+                        <% end %>
+                      <% end %>
+                    </div>
+                    <div class="col mt-2">
+                      <div class="ml-1 mt-1"><%= link_to uf.event.name, event_path(uf.event.id) %></div>
+                        <% uf.event.event_categories.each do |ec| %>
+                          <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
+                        <% end %>
+                      <div class="ml-1 mt-1">開催日時：<%= uf.event.date %></div>
+                      <div class="ml-1 mt-1">募集人数：<%= uf.event.number %>人</div>
+                      <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[uf.event.prefecture_id] %></div>
+                      <div class="ml-1 mt-1"><イベント概要><br>
+                                              <% if uf.event.outline.length > 40 %>
+                                                <%= uf.event.outline[0, 40] + "..." %>
+                                              <% else %>
+                                                <%= uf.event.outline %>
+                                              <% end %>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-           <% end %>
-         <% else %>
-          <p>お気に入りのイベントはありません。</p>
-         <% end %>
-      </div>
+          </div>
+        <% end %>
+      <% else %>
+        <p>お気に入りのイベントはありません。</p>
+      <% end %>
     </div>
+
 </div>
