--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -55,7 +55,7 @@
        イベント日時
       </div>
       <div class="col">
-       <%= f.date_select :date, default: Date.tomorrow %>
+       <%= f.datetime_select :date, default: Date.tomorrow %>
       </div>
       <div class="col">
       </div>
