--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -25,7 +25,7 @@
             <% end %>
           </div>
           <div class="mt-2">
-            <p>開催日時：<%= @event.date %></p>
+            <p>開催日時：<%= @event.date.strftime('%Y/%m/%d %H:%M') %></p>
             <p>開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></p>
             <p>募集人数：<%= @event.number %>人</p>
             <p>参加料金：<%= @event.fee %>円</p>
