Event timeカラム追加&dateカラム変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient">
         <div class="container">
           <% if user_signed_in? %>
             <%= link_to events_path, class: "navbar-brand" do %>
@@ -90,7 +90,7 @@
     </body>
 
     <footer>
-      <div class="mt-5 p-3 bg-success">
+      <div class="mt-5 p-3 bg-primary bg-gradient">
         <div class="border-dark border-dark">
           <!-- フッターコンテンツを追加 -->
           <div class="container text-center text-white">
