--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -24,7 +24,9 @@
             </div>
 
             <div class="form-group">
-              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
+                <%= b.check_box + b.text %>
+              <% end %>
             </div>
 
             <div class="form-group">
@@ -45,8 +47,8 @@
               <div class="form-group col-md-6">
                 <%= f.label :date, "イベント日" %>
                 <%= f.date_select :date, default: Date.tomorrow, class: "form-control" %>
-                <%= f.label :date, "イベント時間" %>
-                <%= f.time_select :date, default: Time.now, class: "form-control" %>
+                <%= f.label :time, "イベント時間" %>
+                <%= f.time_select :time, default: Time.now, class: "form-control" %>
               </div>
             </div>
 
