--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -120,7 +120,9 @@
        興味のある種目 ※任意選択・複数回答
       </div>
       <div class="col-sm-8">
-       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
+        <%= b.check_box + b.text %>
+       <% end %>
       </div>
      </div>
 
