--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -78,6 +78,18 @@
           </table>
 
         </div>
+
+        <div>
+          <% @notifications.each do |notification|%>
+            <% case notification.action %>
+            <% when '0' then %>
+              <% if notification.event.user_id != current_user.id %>
+                <%= link_to "イベントに参加してみませんか？", event_path(notification.event.id) %>
+              <% end %>
+            <% end %>
+          <% end %>
+        </div>
+
       </div>
     </div>
   </div>
