--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -25,7 +25,7 @@
             <% end %>
           </div>
           <div class="mt-2">
-            <p>開催日時：<%= @event.date.strftime('%Y/%m/%d %H:%M') %></p>
+            <p>開催日時：<%= @event.date.strftime("%Y/%m/%d") %> <%= @event.time.strftime("%H:%M") %></p>
             <p>開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></p>
             <p>募集人数：<%= @event.number %>人</p>
             <p>参加料金：<%= @event.fee %>円</p>
@@ -46,7 +46,11 @@
           <% if @event.user_id == current_user.id %>
             <%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %>
           <% else %>
-            <%= link_to '予約する', new_event_reservation_path(@event.id), class: "btn btn-success" %>
+            <% if @event.date >= Date.today %>
+              <%= link_to '予約する', new_event_reservation_path(@event.id), class: "btn btn-success" %>
+            <% else %>
+              このイベントは終了しました。
+            <% end %>
           <% end %>
         <% else %>
           <%= link_to '予約する', new_user_session_path, class: "btn btn-success" %>
@@ -78,7 +82,11 @@
       <p>コメント件数:<%= @event.comments.count %></p>
       <% @event.comments.each do |comment| %>
         <div class="media mb-3">
-          <%= image_tag comment.user.image, size: "100x100", class: "rounded-circle"%>
+          <% if comment.user.image.attached? %>
+            <%= image_tag comment.user.image, size: "100x100", class: "rounded-circle" %>
+          <% else %>
+            <%= image_tag 'no_image', size: "100x100", class: "rounded-circle" %>
+          <% end %>
           <div class="media-body ml-2">
             <h6 class="mt-0"><%= comment.user.full_name %></h6>
             <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
