--- a/app/views/public/users/favorite.html.erb
+++ b/app/views/public/users/favorite.html.erb
@@ -23,7 +23,7 @@
                         <% uf.event.event_categories.each do |ec| %>
                           <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
                         <% end %>
-                      <div class="ml-1 mt-1">開催日時：<%= uf.event.date.strftime('%Y/%m/%d %H:%M') %></div>
+                      <div class="ml-1 mt-1">開催日時：<%= uf.event.date.strftime("%Y/%m/%d") %> <%= uf.event.time.strftime("%H:%M") %></div>
                       <div class="ml-1 mt-1">募集人数：<%= uf.event.number %>人</div>
                       <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[uf.event.prefecture_id] %></div>
                       <div class="ml-1 mt-1"><イベント概要><br>
