--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -50,6 +50,14 @@
       </div>
       <div class="col">
       </div>
+      <div class="col">
+       最小人数
+      </div>
+      <div class="col">
+       <%= f.select :minimum_number, (1..20).to_a %>人
+      </div>
+      <div class="col">
+      </div>
      </div>
 
      <div class="row mt-2">
