--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -45,6 +45,15 @@
                 </div>
               </div>
               <div class="form-group col-md-6">
+                <%= f.label :minimum_number, "最小人数" %>
+                <div class="input-group">
+                  <%= f.select :minimum_number, (1..20).to_a, {}, class: "form-control" %>
+                  <div class="input-group-append">
+                    <span class="input-group-text">人</span>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group col-md-6">
                 <%= f.label :date, "イベント日" %>
                 <%= f.date_select :date, default: Date.tomorrow, class: "form-control" %>
                 <%= f.label :time, "イベント時間" %>
