--- a/app/views/public/events/result.html.erb
+++ b/app/views/public/events/result.html.erb
@@ -5,41 +5,44 @@
    <% if @events.any?%>
     <% @events.each do |event| %>
 
-    <div class="col-md-8 mx-auto">
-      <div class="container mt-4">
-        <div class="row">
-            <div class="col-md-12 mt-2 border">
-              <div class="row">
-                <div class="col">
-                  <%= link_to event_path(event.id) do %>
-                    <% if event.image.attached? %>
-                      <%= image_tag event.image, class: "img-fluid" %>
-                    <% else %>
-                      <%= image_tag 'no_image', class: "img-fluid" %>
+      <div class="col-md-8 mx-auto">
+        <div class="container mt-4">
+          <div class="row">
+              <div class="col-md-12 mt-2 border">
+                <div class="row">
+                  <div class="col">
+                    <%= link_to event_path(event.id) do %>
+                      <% if event.image.attached? %>
+                        <%= image_tag event.image, class: "img-fluid" %>
+                      <% else %>
+                        <%= image_tag 'no_image', class: "img-fluid" %>
+                      <% end %>
                     <% end %>
-                  <% end %>
-                </div>
-                <div class="col mt-2">
-                  <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
-                  <% event.event_categories.each do |ec| %>
-                    <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
-                  <% end %>
-                  <div class="ml-1 mt-1">開催日時：<%= event.date.strftime("%Y/%m/%d") %> <%= event.time.strftime("%H:%M") %></div>
-                  <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
-                  <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
-                  <div class="ml-1 mt-1"><イベント概要><br>
-                    <% if event.outline.length > 40 %>
-                      <%= event.outline[0, 40] + "..." %>
-                    <% else %>
-                      <%= event.outline %>
+                  </div>
+                  <div class="col mt-2">
+                    <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
+                    <% event.event_categories.each do |ec| %>
+                      <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
                     <% end %>
+                    <div class="ml-1 mt-1">開催日時：<%= event.date.strftime("%Y/%m/%d") %> <%= event.time.strftime("%H:%M") %></div>
+                    <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
+                    <% if event.minimum_number.present? %>
+                      <div class="ml-1 mt-1">・<%= event.minimum_number %>人で予約してください。</div>
+                    <% end %>
+                    <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
+                    <div class="ml-1 mt-1"><イベント概要><br>
+                      <% if event.outline.length > 40 %>
+                        <%= event.outline[0, 40] + "..." %>
+                      <% else %>
+                        <%= event.outline %>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
-    </div>
 
     <% end %>
    <% else %>
