--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -27,6 +27,36 @@
           <div class="mt-2">
             <p>開催日時：<%= @event.date %></p>
             <p>開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></p>
+            <script type="text/javascript">
+             function initMap() {
+               var test = {lat: <%= @event.latitude %>, lng: <%= @event.longitude %>};
+               var map = new google.maps.Map(document.getElementById('map'), {
+                         zoom: 15,
+                         center: test
+                         });
+               var transitLayer = new google.maps.TransitLayer();
+               transitLayer.setMap(map);
+               var contentString = '住所：<%= @event.place %>';
+               var infowindow = new google.maps.InfoWindow({
+                 content: contentString
+               });
+               var marker = new google.maps.Marker({
+                             position:test,
+                             map: map
+                           });
+               marker.addListener('click', function() {
+                 infowindow.open(map, marker);
+               });
+             }
+            </script>
+            <style type="text/css">
+              #map { height: 300px;
+                    width: 100%;}
+            </style>
+            <script async defer
+                       src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap">
+            </script>
+            <div id="map"></div>
             <p>募集人数：<%= @event.number %>人　予約した人数：<%= @reservation.reserved_number %></p>
             <p>参加料金：<%= @event.fee %>円</p>
             <p>お支払い方法：<%= @event.how_to_pay_i18n %></p>
