--- a/app/views/public/users/favorite.html.erb
+++ b/app/views/public/users/favorite.html.erb
@@ -9,7 +9,7 @@
               <div class="row">
                 <div class="col-md-12 mt-2 border">
                   <div class="row">
-                    <div class="col">
+                    <div class="col m-2">
                       <% if uf.event.image.attached? %>
                         <%= image_tag uf.event.image, class: "img-fluid" %>
                       <% else %>
