--- a/app/views/public/users/reserved.html.erb
+++ b/app/views/public/users/reserved.html.erb
@@ -9,7 +9,7 @@
               <div class="row">
                 <div class="col-md-12 mt-2 border">
                   <div class="row">
-                    <div class="col">
+                    <div class="col m-2">
                       <%= link_to event_path(ur.event.id) do %>
                         <% if ur.event.image.attached? %>
                           <%= image_tag ur.event.image, class: "img-fluid" %>
