--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -19,6 +19,7 @@
           <div class="mt-3">
             <h4 class="font-weight-bold">登録情報</h4>
             <%= link_to "編集する", user_information_edit_path, class: "btn btn-success btn-sm" %>
+            <%= link_to "退会する", user_unsubscribe_path, class: "btn btn-danger btn-sm" %>
           </div>
 
           <table class="table table-bordered mt-3">
