--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,22 +1,19 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">カテゴリー編集</div>
+  <div class="mt-4 ml-3 text-center">
+    <h3>カテゴリー編集</h3>
+  </div>
   <%= form_with model: @category, url: admin_category_path, method: :patch do |f| %>
     <div class="mt-4">
+      <div class="form-group row">
+        <label for="categoryName" class="col-form-label col-2">カテゴリー名</label>
+        <div class="col-8">
+          <%= f.text_field :name, id: "categoryName", class: "form-control" %>
+        </div>
+      </div>
 
-     <div class="row mt-2">
-      <div class="col">
-       カテゴリー名
+      <div class="mt-3 text-center">
+        <%= f.submit "編集", class: "btn btn-success" %>
       </div>
-      <div class="col">
-       <%= f.text_field :name %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="mt-3 text-center">
-      <%= f.submit "編集", class: "w-25 btn btn-success" %>
-     </div>
     </div>
   <% end %>
 </div>
