--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,20 +1,25 @@
 <div class="container">
- <div class="mt-4 ml-3 table-secondary col-sm-2 text-center"><h3>カテゴリー一覧</h3></div>
-  <table class='table mt-5'>
-   <thead class="table-secondary">
-    <tr>
-     <th>イベント名</th>
-     <th></th>
-    </tr>
-   </thead>
-
-   <tbody>
-    <% @categories.each do |category| %>
-     <tr>
-      <td><%= category.name %></td>
-      <td><%= link_to "編集", edit_admin_category_path(category.id) %></td>
-     </tr>
-    <% end %>
-   </tbody>
-  </table>
+  <div class="mt-4 ml-3 text-center">
+    <h3>カテゴリー一覧</h3>
+  </div>
+  <div class="table-responsive mt-4">
+    <table class="table table-striped table-bordered">
+      <thead class="table-secondary">
+        <tr>
+          <th>カテゴリー名</th>
+          <th>編集</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @categories.each do |category| %>
+          <tr>
+            <td><%= category.name %></td>
+            <td>
+              <%= link_to "編集", edit_admin_category_path(category.id), class: "btn btn-success" %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
