--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">ユーザー編集</div>
+ <div class="mt-4 ml-3 text-center">
+    <h3>ユーザー編集</h3>
+  </div>
   <%= form_with model: @user, url: admin_update_path(@user.id), method: :patch do |f| %>
     <div class="mt-4">
 
