--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,33 +1,30 @@
 <div class="container">
- <div class="mt-4 ml-3 table-secondary col-sm-2 text-center"><h3>ユーザー一覧</h3></div>
-
-  <div class="text-center">
-   <table class='d-inline table'>
-    <thead class="table-secondary">
-     <tr>
-      <th class="w-auto">会員ID</th>
-      <th class="w-auto">氏名</th>
-      <th class="w-auto">メールアドレス</th>
-      <th class="w-auto">退会ステータス</th>
-     </tr>
-    </thead>
-
-    <tbody>
-     <% @users.each do |user|%>
-     <tr>
-      <td class="w-auto"><%= user.id %></td>
-      <td class="w-auto"><%= link_to user.full_name, admin_user_path(user.id) %></td>
-      <td class="w-auto"><%= user.email %></td>
-      <% if user.is_deleted == false %>
-       <td class="w-auto text-success">有効</td>
-      <% end %>
-      <% if user.is_deleted == true %>
-       <td class="w-auto text-muted">退会</td>
-      <% end %>
-     </tr>
-     <% end %>
-    </tbody>
-   </table>
+  <div class="mt-4 ml-3 text-center">
+    <h3>ユーザー一覧</h3>
   </div>
 
+  <div class="text-center">
+    <table class="table table-bordered mt-4">
+      <thead class="table-secondary">
+        <tr>
+          <th class="w-auto">会員ID</th>
+          <th class="w-auto">氏名</th>
+          <th class="w-auto">メールアドレス</th>
+          <th class="w-auto">退会ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td class="w-auto"><%= user.id %></td>
+            <td class="w-auto"><%= link_to user.full_name, admin_user_path(user.id) %></td>
+            <td class="w-auto"><%= user.email %></td>
+            <td class="w-auto <%= user.is_deleted ? 'text-muted' : 'text-success' %>">
+              <%= user.is_deleted ? '退会' : '入会中' %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
