--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,11 @@
               <i class="fa-solid fa-person-running mr-2"></i>
               SportsMeet
             <% end %>
+          <% elsif admin_signed_in? %>
+            <%= link_to  admin_index_path, class: "navbar-brand" do %>
+            <i class="fa-solid fa-person-running mr-2"></i>
+              SportsMeet
+            <% end %>
           <% else %>
             <%= link_to root_path, class: "navbar-brand" do %>
               <i class="fa-solid fa-person-running mr-2"></i>
@@ -61,6 +66,11 @@
                 </li>
               <% elsif admin_signed_in? %>
                 <!-- 管理者がログインしている場合 -->
+                <li class="nav-item">
+                  <%= link_to admin_categories_path, class: "nav-link" do %>
+                    カテゴリー一覧
+                  <% end %>
+                </li>
                 <li class="nav-item">
                   <%= link_to new_admin_category_path, class: "nav-link" do %>
                     カテゴリー追加
