--- a/app/views/public/users/reserved.html.erb
+++ b/app/views/public/users/reserved.html.erb
@@ -3,37 +3,37 @@
 
     <div class="mt-4">
       <% if @user_reserved.any? %>
-        <% @user_reserved.each do |ur| %>
+        <% @user_reserved.each do |reserved| %>
           <div class="col-md-8 mx-auto">
             <div class="container mt-4">
               <div class="row">
                 <div class="col-md-12 mt-2 border">
                   <div class="row">
                     <div class="col m-2">
-                      <%= link_to event_path(ur.event.id) do %>
-                        <% if ur.event.image.attached? %>
-                          <%= image_tag ur.event.image, class: "img-fluid" %>
+                      <%= link_to event_path(reserved.event.id) do %>
+                        <% if reserved.event.image.attached? %>
+                          <%= image_tag reserved.event.image, class: "img-fluid" %>
                         <% else %>
                           <%= image_tag 'no_image', class: "img-fluid" %>
                         <% end %>
                       <% end %>
                     </div>
                     <div class="col mt-2">
-                      <div class="ml-1 mt-1"><%= link_to ur.event.name, event_path(ur.event.id) %></div>
-                        <% ur.event.categories.each do |category| %>
+                      <div class="ml-1 mt-1"><%= link_to reserved.event.name, event_path(reserved.event.id) %></div>
+                        <% reserved.event.categories.each do |category| %>
                           <span class="badge badge-primary mr-2"><%= category.name %></span>
                         <% end %>
-                      <div class="ml-1 mt-1">開催日時：<%= ur.event.date.strftime("%Y/%m/%d") %> <%= ur.event.time.strftime("%H:%M") %></div>
-                      <div class="ml-1 mt-1">募集人数：<%= ur.event.number %>人</div>
-                      <% if ur.event.minimum_number.present? %>
-                        <div class="ml-1 mt-1">・<%= ur.event.minimum_number %>人で予約しています。</div>
+                      <div class="ml-1 mt-1">開催日時：<%= reserved.event.date.strftime("%Y/%m/%d") %> <%= reserved.event.time.strftime("%H:%M") %></div>
+                      <div class="ml-1 mt-1">募集人数：<%= reserved.event.number %>人</div>
+                      <% if reserved.event.minimum_number.present? %>
+                        <div class="ml-1 mt-1">・<%= reserved.reserved_number %>人で予約しています。</div>
                       <% end %>
-                      <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[ur.event.prefecture_id] %></div>
+                      <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[reserved.event.prefecture_id] %></div>
                       <div class="ml-1 mt-1"><イベント概要><br>
-                                               <% if ur.event.outline.length > 40 %>
-                                                 <%= ur.event.outline[0, 40] + "..." %>
+                                               <% if reserved.event.outline.length > 40 %>
+                                                 <%= reserved.event.outline[0, 40] + "..." %>
                                                <% else %>
-                                                 <%= ur.event.outline %>
+                                                 <%= reserved.event.outline %>
                                                <% end %>
                       </div>
                     </div>
