--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -6,7 +6,7 @@
       <div class="container border border-dark">
        <div class="text-center border-bottom">検索</div>
         <div class="container">
-          <%= form_with url: admin_result_path(@events), method: :get, class: "form-inline justify-content-between" do |f| %>
+          <%= form_with url: admin_event_result_path(@events), method: :get, class: "form-inline justify-content-between" do |f| %>
             <div class="mt-2 mb-2">
               <%= f.text_field :keyword, placeholder: "キーワードを入力" %>
             </div>
