--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -6,7 +6,7 @@
           <h4>マイページ</h4>
         </div>
 
-        <% if @notification.present? %>
+        <% if @notifications.present? %>
 
           <div id="mask" class="hidden"></div>
           <div id="modal" class="hidden"><%= link_to "招待が来ています。", user_notification_path, class: "btn btn-success btn-sm", remote: true %></div>
