--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -13,6 +13,7 @@
 
       <div class="mt-3 text-center">
         <%= f.submit "編集", class: "btn btn-success" %>
+        <%= link_to '削除', admin_category_path(@category.id), method: :delete, class: "btn btn-danger" %>
       </div>
     </div>
   <% end %>
