--- a/app/views/public/reservations/edit.html.erb
+++ b/app/views/public/reservations/edit.html.erb
@@ -10,9 +10,15 @@
 　<% end %>
 
       <div class="mt-4">
-        <div class="alert alert-success">
-            <%= @event.minimum_number %>人で予約してください。
-        </div>
+        <% if @event.fixed_number.present? %>
+          <div>
+            <%= @event.fixed_number %>人で予約してください。
+          </div>
+        <% elsif @event.minimum_number.present? %>
+          <div>
+            <%= @event.minimum_number %>人以上で予約してください。
+          </div>
+        <% end %>
         <% if @event.available_numbers > 0 %>
           <div class="alert alert-success">
             予約可能な人数: <%= @event.available_numbers %>
@@ -29,7 +35,7 @@
             </div>
             <%= f.hidden_field :event_id, value: @event.id %>
             <%= f.hidden_field :date, value: @event.date %>
-            <%= f.submit "予約する", class: "btn btn-success btn-block" %>
+            <%= f.submit "予約する", class: "btn btn-success" %>
           <% end %>
         <% else %>
           <div class="alert alert-danger">
