--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="text-center">
-    <h4>イベント詳細</h4>
+    <h4>予約詳細</h4>
   </div>
 
   <div class="row justify-content-center mt-4">
@@ -57,7 +57,13 @@
                        src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap">
             </script>
             <div id="map"></div>
-            <p>募集人数：<%= @event.number %>人　予約した人数：<%= @reservation.reserved_number %></p>
+            <p>募集人数：<%= @event.number %>人</p>
+            <p><%= @reservation.reserved_number %>人で予約しています。</p>
+            <% if @reservation.reserved_number >= 2 %>
+              <p>代表者名：<%= @reservation.user.last_name %> <%= @reservation.user.first_name %> 様</p>
+            <% else %>
+              <p>予約者名：<%= @reservation.user.last_name %> <%= @reservation.user.first_name %> 様</p>
+            <% end %>
             <p>参加料金：<%= @event.fee %>円</p>
             <p>お支払い方法：<%= @event.how_to_pay_i18n %></p>
           </div>
