--- a/app/views/public/users/favorite.html.erb
+++ b/app/views/public/users/favorite.html.erb
@@ -23,8 +23,10 @@
                         <% end %>
                       <div class="ml-1 mt-1">開催日時：<%= favorite.event.date.strftime("%Y/%m/%d") %> <%= favorite.event.time.strftime("%H:%M") %></div>
                       <div class="ml-1 mt-1">募集人数：<%= favorite.event.number %>人</div>
-                      <% if favorite.event.minimum_number.present? %>
-                        <div class="ml-1 mt-1">人数：<%= favorite.event.minimum_number %>人で予約してください。</div>
+                      <% if favorite.event.fixed_number.present? %>
+                        <div class="ml-1 mt-1">・<%= favorite.event.fixed_number %>人で予約してください。</div>
+                      <% elsif favorite.event.minimum_number.present? %>
+                        <div class="ml-1 mt-1">・<%= favorite.event.minimum_number %>人以上で予約してください。</div>
                       <% end %>
                       <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[favorite.event.prefecture_id] %></div>
                       <div class="ml-1 mt-1"><イベント概要><br>
