--- a/app/views/public/users/reserved.html.erb
+++ b/app/views/public/users/reserved.html.erb
@@ -19,15 +19,13 @@
                       <% end %>
                     </div>
                     <div class="col mt-2">
-                      <div class="ml-1 mt-1"><%= link_to reserved.event.name, event_path(reserved.event.id) %></div>
+                      <div class="ml-1 mt-1"><%= link_to reserved.event.name, event_reservation_path(reserved.event, reserved) %></div>
                         <% reserved.event.categories.each do |category| %>
                           <span class="badge badge-primary mr-2"><%= category.name %></span>
                         <% end %>
                       <div class="ml-1 mt-1">開催日時：<%= reserved.event.date.strftime("%Y/%m/%d") %> <%= reserved.event.time.strftime("%H:%M") %></div>
                       <div class="ml-1 mt-1">募集人数：<%= reserved.event.number %>人</div>
-                      <% if reserved.event.minimum_number.present? %>
                         <div class="ml-1 mt-1">・<%= reserved.reserved_number %>人で予約しています。</div>
-                      <% end %>
                       <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[reserved.event.prefecture_id] %></div>
                       <div class="ml-1 mt-1"><イベント概要><br>
                                                <% if reserved.event.outline.length > 40 %>
